--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ a:hover {
   text-align: center;
   /*background-image: url("https://unsplash.it/1300/600?random");*/
   /*background-image: url(images/background.jpg);*/
+  background-color: white;
   background-size: cover;
   background-attachment: fixed;
   height: 110px;
@@ -49,6 +50,10 @@ a:hover {
   border-style: solid;
   font-family: 'Cairo', sans-serif;
   font-size: 35px;
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  z-index: 10;
 }
 #banner h1 {
   font-family: 'Cairo', sans-serif;
@@ -93,4 +98,8 @@ a:hover {
   padding: 50px;
   font-weight: lighter;
   text-align: center;
+}
+
+#my-pics {
+  z-index: 1;
 }
